Catch up with server test coverage
